language/move-lang/tests/move_check/dependencies/use_friend_transitive_by_use.exp
error[E02004]: invalid 'module' declaration
   ┌─ tests/move_check/dependencies/use_friend_transitive_by_use.move:16:9
   │
 6 │     friend C;
   │     --------- '0x2::C' is a friend of '0x2::A'
   ·
 9 │         B::b()
   │         ---- '0x2::B' uses '0x2::A'
   ·
16 │         C::c()
   │         ^^^^ '0x2::C' uses '0x2::B'. This 'use' relationship creates a dependency cycle.

